--- a/MusicApp.csproj
+++ b/MusicApp.csproj
@@ -33,6 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MySql.Data, Version=8.0.16.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -56,6 +57,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdicionarAlbuns.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdicionarAlbuns.Designer.cs">
+      <DependentUpon>AdicionarAlbuns.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Conexao.cs" />
     <Compile Include="Music Player.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -64,6 +72,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AdicionarAlbuns.resx">
+      <DependentUpon>AdicionarAlbuns.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Music Player.resx">
       <DependentUpon>Music Player.cs</DependentUpon>
     </EmbeddedResource>
@@ -75,6 +86,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -108,6 +120,9 @@
       <Isolated>False</Isolated>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\botao-play %282%29.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
